Changed 'final evaluation' to 'evaluation'. Added calendar for graduation date.

--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -56,7 +56,7 @@
 
           <div class="form-group">
             <label class="control-label">Graduation Date:</label>
-            <input class="form-control" type="text" ng-model="postCandidate.graduationDate" required>
+            <input class="form-control" type="date" ng-model="postCandidate.graduationDate" required>
           </div>
 
           <div class="form-group">
@@ -90,7 +90,7 @@
           </div>
 
           <div class="form-group">
-            <label class="control-label" for="finalEvaluation">Final Evaluation:</label>
+            <label class="control-label" for="finalEvaluation">Evaluation:</label>
             <div class="radio">
               <label class="radio-inline">
               <input type="radio" name="finalEvaluation" ng-model="postCandidate.finalEvaluation" value="invite" required>Invite to 1st Round Interviews</label>
