Finished adding dropdowns

--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -82,10 +82,18 @@
           <div class="form-group">
             <label class="control-label" for="areaOfInterest">Areas of Interest (i.e. front end, back end, iOS, Android, etc.)</label>
             <select class="form-control" id="areaOfInterest" ng-model="postCandidate.areaOfInterest" multiple required>
-              <option value="Front end">Front end</option>
-              <option value="Back end">Back end</option>
+              <option value="Front end">Front End</option>
+              <option value="Back end">Back End</option>
               <option value="Android">Android</option>
               <option value="iOS">iOS</option>
+              <option value="Web Development">Web Development</option>
+              <option value="Enterprise Java">Enterprise Java</option>
+              <option value="Mobile Development">Mobile Development</option>
+              <option value="Big Data">Big Data</option>
+              <option value="SQL Database">SQL Database</option>
+              <option value="Database Engineer">Database Engineer</option>
+              <option value="quality engineer">Quality Engineer</option>
+              <option value="Info Security">Info Security</option>
             </select>
           </div>
 
@@ -95,6 +103,9 @@
               <option value="Java">Java</option>
               <option value="C">C</option>
               <option value="C++">C++</option>
+              <option value="HTML">HTML</option>
+              <option value="CSS">CSS</option>
+              <option value="Oracle">Oracle</option>
             </select>
           </div>
 
