addded hour block to calendar

--- a/app/views/calendarSidebar.html
+++ b/app/views/calendarSidebar.html
@@ -7,7 +7,7 @@
       </li>
       <li>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search" aria-describedby="sizing-addon2" ng-model="searchText">
+          <input type="text" class="form-control" placeholder="Search" aria-describedby="sizing-addon2" ng-model="search[property]">
           <span class="input-group-addon" id="sizing-addon2"><span class="glyphicon glyphicon-search"></span></span>
         </div>
       </li>
