Added notes area on form. Added backend support for notes.

--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -122,6 +122,11 @@
           </div>
 
           <div class="form-group">
+            <label class="control-label">Notes</label>
+            <textarea class="form-control" rows="3" ng-model="postCandidate.notes" required></textarea>
+          </div>
+
+          <div class="form-group">
             <label class="control-label">Screener Initials</label>
             <input class="form-control" type="text" ng-model="postCandidate.screenerInitials" required>
           </div>
