--- a/app/views/candidateInput.html
+++ b/app/views/candidateInput.html
@@ -86,6 +86,14 @@
               <option value="Back end">Back end</option>
               <option value="Android">Android</option>
               <option value="iOS">iOS</option>
+              <option value="Web Development">Web Development</option>
+              <option value="Enterprise Java">Enterprise Java</option>
+              <option value="Mobile Development">Mobile Development</option>
+              <option value="Big Data">Big Data</option>
+              <option value="SQL Database">SQL Database</option>
+              <option value="Database Engineer">Database Engineer</option>
+              <option value="quality engineer">Quality Engineer</option>
+              <option value="Info Security">Info Security</option>
             </select>
           </div>
 
@@ -95,11 +103,13 @@
               <option value="Java">Java</option>
               <option value="C">C</option>
               <option value="C++">C++</option>
+              <option value="HTML">HTML</option>
+              <option value="CSS">CSS</option>
+              <option value="Oracle">Oracle</option>
             </select>
           </div>
 
           <div class="text-center">
-
             <span class="glyphicon glyphicon-refresh" ng-show="sendingData" aria-hidden="true"></span>
             <span class="glyphicon-class" ng-show="sendingData"></span>
             <button type="submit submitBtn" ng-class="submitBtnClasses" data-ng-click="submit()">Submit</button>
