--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -36,6 +36,9 @@
     <div class="info-group">
       <label>Status:</label> {{candidate.finalEvaluation}}
     </div>
+		<div class="info-group">
+      <label>Notes:</label> {{candidate.notes}}
+    </div>
     <div class="info-group">
       <label>Screener:</label> {{candidate.screenerInitials}}
     </div>
