--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -16,10 +16,12 @@
     position: absolute;
     left: 250px;
     width: 0;
-    height: 280%;
+    height: 100%;
     margin-left: -250px;
     overflow-y: auto;
     background: #F8F8F8;
+    margin-bottom: -5000px;
+    padding-bottom: 5000px;
     border-right: 1px solid #F1F1F1;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
