--- a/app/styles/calendar.css
+++ b/app/styles/calendar.css
@@ -83,6 +83,7 @@ button.candidate-queue-person {
 }
 
 .cal-select-candidate{
-  height: 32px;
-  width: 50%;
+  height: 26px;
+  margin: 0;
+  width: 43%;
 }
