added interviewers to view candidates page

--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -40,7 +40,7 @@
       <label>Screener:</label> {{candidate.screenerInitials}}
     </div>
     <div class="info-group">
-      <label>Interviewers:</label> {{candidate.Interview.interviewer_Name}}
+      <label>Interviewers:</label> {{candidate.Interview.interviewer_1}}, {{candidate.Interview.interviewer_2}}
     </div>
 	</div>
 </script>
