Interview with soft pen added

--- a/app/views/interviewerForm.html
+++ b/app/views/interviewerForm.html
@@ -54,7 +54,7 @@
 
   <div class="row" style="margin-left: 50px">
     <div>
-      <img class="mustLoad" id="resume-image" ng-src="{{resumeBase64}}" style="display: none;" />
+      <img class="mustLoad" id="resume-image" ng-src="{{currentPage}}" style="display: none;" />
       <canvas class="" id="c" height="995" width="775" style="border: 1px solid black"></canvas>
     </div>
   </div>
