--- a/app/views/candidateInput.html
+++ b/app/views/candidateInput.html
@@ -82,17 +82,16 @@
           <div class="form-group">
             <label class="control-label" for="areaOfInterest">Areas of Interest (i.e. front end, back end, iOS, Android, etc.)</label>
             <select class="form-control" id="areaOfInterest" ng-model="postCandidate.areaOfInterest" multiple required>
-              <option value="Front end">Front end</option>
-              <option value="Back end">Back end</option>
+              <option value="Front End">Front end</option>
+              <option value="Back End">Back end</option>
               <option value="Android">Android</option>
               <option value="iOS">iOS</option>
               <option value="Web Development">Web Development</option>
               <option value="Enterprise Java">Enterprise Java</option>
-              <option value="Mobile Development">Mobile Development</option>
               <option value="Big Data">Big Data</option>
               <option value="SQL Database">SQL Database</option>
               <option value="Database Engineer">Database Engineer</option>
-              <option value="quality engineer">Quality Engineer</option>
+              <option value="Quality Engineer">Quality Engineer</option>
               <option value="Info Security">Info Security</option>
             </select>
           </div>
@@ -103,8 +102,12 @@
               <option value="Java">Java</option>
               <option value="C">C</option>
               <option value="C++">C++</option>
+              <option value="C#/.NET">C++</option>
               <option value="HTML">HTML</option>
               <option value="CSS">CSS</option>
+              <option value="JavaScript">CSS</option>
+              <option value="Python">CSS</option>
+              <option value="SQL">CSS</option>
               <option value="Oracle">Oracle</option>
             </select>
           </div>
