--- a/app/views/candidateInput.html
+++ b/app/views/candidateInput.html
@@ -56,11 +56,11 @@
 
           <div class="form-group">
             <label class="control-label">Graduation Date:</label>
-            <input class="form-control" type="date" ng-model="postCandidate.graduationDate" required>
+            <input class="form-control" type="month" ng-model="postCandidate.graduationDate" required>
           </div>
 
           <div class="form-group">
-            <label class="control-label" for="needSponsorship">Needs Sponsorship?</label>
+            <label class="control-label" for="needSponsorship">Are you legally authorized to work in the United States and in the future not require employment sponsorship in the United States?</label>
             <div class="radio">
               <label class="radio-inline">
               <input type="radio" name="needSponsorship" ng-model="postCandidate.needSponsorship" value="yes" required>Yes</label>
