--- a/app/views/candidateInput.html
+++ b/app/views/candidateInput.html
@@ -102,12 +102,12 @@
               <option value="Java">Java</option>
               <option value="C">C</option>
               <option value="C++">C++</option>
-              <option value="C#/.NET">C++</option>
+              <option value="C#/.NET">C#/.NET</option>
               <option value="HTML">HTML</option>
               <option value="CSS">CSS</option>
-              <option value="JavaScript">CSS</option>
-              <option value="Python">CSS</option>
-              <option value="SQL">CSS</option>
+              <option value="JavaScript">JavaScript</option>
+              <option value="Python">Python</option>
+              <option value="SQL">SQL</option>
               <option value="Oracle">Oracle</option>
             </select>
           </div>
