--- a/app/views/interviewerForm.html
+++ b/app/views/interviewerForm.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h1 class="col-xs-12">{{candidate.firstName}}, {{candidate.lastName}}</h1>
+    <h1 class="col-xs-12">{{candidate.firstName}}, {{candidate.lastName}} <small>- Interview {{interviewQId + 1}}</small></h1>
   </div>
   <hr/>
   <div class="row tools-bar" id="options">
@@ -52,9 +52,9 @@
   </div>
 
 
-  <div class="row" style="margin-left: 50px">
+  <div ng-repeat="img in pages" class="row" style="margin-left: 50px">
     <div>
-      <img class="mustLoad" id="resume-image" ng-src="{{currentPage}}" style="display: none;" />
+      <img class="mustLoad" id="resume-image" ng-src="img.img_uri" style="display: none;" />
       <canvas class="" id="c" height="995" width="775" style="border: 1px solid black"></canvas>
     </div>
   </div>
