added canvas for puzzle

--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -39,16 +39,23 @@
             <input class="form-control" type="text" ng-model="postCandidate.screenerInitials" required>
           </div>
 
-          <div class="text-center">
+          <div id="image-preview-div" class="text-center">
             <div id="thumbnail-preview-area" ng-show="pictureAdded">
               <img ng-src="{{postCandidate.resumeBase64}}" width="300" height="400" />
             </div>
 
+            <div id="puzzle-preview-area" ng-show="pictureAdded">
+              <img style="border: 1px solid black;" ng-src="{{postCandidate.puzzleBase64}}" width="300" height="400" />
+            </div>
+          </div>
+
+          <div class="text-center">
             <span class="glyphicon glyphicon-refresh" ng-show="sendingData" aria-hidden="true"></span>
             <span class="glyphicon-class" ng-show="sendingData"></span>
             <button type="submit submitBtn" ng-class="submitBtnClasses" data-ng-click="submit()" ng-disabled="candidateForm.$invalid">{{buttonText}}</button>
             <button type="submit" class="btn btn-warning">Cancel</button>
           </div>
+
         </form>
       </div>
     </div>
