--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -34,12 +34,23 @@
 }
 
 /* candidateForm.html */
+#image-preview-div {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
 #candidate-form-container {
   margin-bottom: 5%;
 }
 
 #thumbnail-preview-area {
   margin: 20px auto;
+  display: inline;
+}
+
+#puzzle-preview-area {
+  margin: 20px auto;
+  display: inline;
 }
 
 .camera-capture {
@@ -118,7 +129,7 @@
 
 /* viewCandidate.html */
 .candidate-name {
-  color:#494949;  
+  color:#494949;
 }
 
 .tab-content {
