--- a/app/views/screenerSplash.html
+++ b/app/views/screenerSplash.html
@@ -2,6 +2,8 @@
   <h1 class="text-center">Please hand the tablet back to your recruiter.</h1>
   <br />
   <div class="text-center">
-    <button class="btn btn-lg btn-primary" ng-click="goToScreenerForm()">Next</button>
+    <button class="btn btn-lg btn-primary" ng-click="goToPuzzleCanvas()">Puzzle</button>
+    <span>OR</span>
+    <button class="btn btn-lg btn-primary" ng-click="goToScreenerForm()">Proceed</button>
   </div>
 </div>
