puzzle functionality complete, needs backend support

--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -33,11 +33,11 @@
           </div>
 
           <div id="image-preview-div" class="text-center">
-            <div id="thumbnail-preview-area" ng-show="pictureAdded">
+            <div id="thumbnail-preview-area" ng-show="resumeAdded">
               <img ng-src="{{postCandidate.resumeBase64}}" width="300" height="400" />
             </div>
 
-            <div id="puzzle-preview-area" ng-show="pictureAdded">
+            <div id="puzzle-preview-area" ng-show="puzzleAdded">
               <img style="border: 1px solid black;" ng-src="{{postCandidate.puzzleBase64}}" width="300" height="400" />
             </div>
           </div>
