backend work for puzzleimages

--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -1,6 +1,7 @@
 <script type="text/ng-template" id="tabNotes.html">
 	<div id="notes-tab-content">
-		<img id="tab-resume-img" ng-src="{{candidate.Images[0].img_uri}}" alt="Resume" width="200" height="275" data-toggle="modal" data-target="#imageModal">
+    <img id="tab-resume-img" ng-src="{{candidate.Images[0].img_uri}}" alt="Resume" width="200" height="275" data-toggle="modal" data-target="#imageModal">
+    <img id="tab-puzzle-img" ng-src="{{candidate.Images[1].img_uri}}" alt="Puzzle" width="200" height="275" data-toggle="modal" data-target="#imageModal">
 	</div>
 </script>
 
