--- a/app/views/adminOptions.html
+++ b/app/views/adminOptions.html
@@ -1,4 +1,6 @@
-<div class="container-fluid">
+<script type="text/ng-template" id="tabQuestions.html">
+	<div id="notes-tab-content">
+    <div class="container-fluid">
   <div class="row">
     <h1 class="text-center">Administrative Options</h1>
     <hr/>
@@ -18,16 +20,16 @@
                   <div class="form-group">
                       <label class="col-xs-3">Type</label>
                       <div class="col-xs-8">
-                          <label class="radio-inline"><input ng-model="newForm.form_type" type="radio" name="type" value="Technical" required>Technical</label>
-                          <label class="radio-inline"><input ng-model="newForm.form_type" type="radio" name="type" value="Behavioral" required>Behavioral</label>
+                          <label ng-model="newForm.type" class="radio-inline"><input type="radio" name="type" value="Technical" required>Technical</label>
+                          <label ng-model="newForm.type" class="radio-inline"><input type="radio" name="type" value="Behavioral" required>Behavioral</label>
                           <span class="alert alert-danger alertMessage" ng-show="submitted && newQForms.type.$error.required">Form type is required!</span>
                       </div>
                   </div>
                   <div class="form-group">
                       <label class="col-xs-3">Form</label>
                       <div class="col-xs-8">
-                          <label class="radio-inline"><input ng-model="newForm.form_model" type="radio" name="formL" value="A" required>A</label>
-                          <label class="radio-inline"><input ng-model="newForm.form_model" type="radio" name="formL" value="B" required>B</label>
+                          <label ng-model="newForm.form" class="radio-inline"><input type="radio" name="formL" value="A" required>A</label>
+                          <label ng-model="newForm.form" class="radio-inline"><input type="radio" name="formL" value="B" required>B</label>
                           <span class="alert alert-danger alertMessage" ng-show="submitted && newQForms.formL.$error.required">Form is required!</span>
                       </div>
                   </div>
@@ -41,22 +43,21 @@
 
                   <div class="form-group">
                     <label class="col-xs-3">File</label>
-                    <input data-ng-click="fileId=0" name="file1" type="file" class="col-xs-8 form-control-file" placeholder="Page 1" custom-on-change="readImage" required>
+                    <input name="file1" type="file" class="col-xs-8 form-control-file" placeholder="Page 1" custom-on-change="readImage" required>
                     <span class="alert alert-danger alertMessage" ng-show="submitted && newQForms.file1.$error.required">One file is required at least!</span>
                   </div>
 
                   <div class="form-group">
-                    <input data-ng-click="fileId=1" type="file" class="col-xs-8 col-xs-offset-3 form-control-file" placeholder="Page 2" custom-on-change="readImage">
+                    <input type="file" class="col-xs-8 col-xs-offset-3 form-control-file" placeholder="Page 2" custom-on-change="readImage">
                   </div>
 
                   <div class="form-group">
-                    <input data-ng-click="fileId=2" type="file" class="col-xs-8 col-xs-offset-3 form-control-file" placeholder="Page 3" custom-on-change="readImage">
+                    <input type="file" class="col-xs-8 col-xs-offset-3 form-control-file" placeholder="Page 3" custom-on-change="readImage">
                   </div>
 
                   <div class="modal-footer">
-                      <button data-ng-click="submit()" class="btn btn-primary" type="submit">Submit</button>
-                      <h5 class="pull-left text-success" ng-show="(submitted && saved)">Saved</h5>
-                      <h5 class="pull-left text-danger" ng-show="(submitted && !saved)">Failed</h5>
+                      <p class="pull-left">Saved</p>
+                      <button data-ng-click="submit(newQForms)" class="btn btn-primary" type="submit">Submit</button>
                   </div>
                 </div>
               </form>
@@ -85,8 +86,8 @@
             <i ng-click="toggleActive(form)" ng-show="form.active" class="btn btn-success glyphicon glyphicon-ok-circle"></i>
             <i ng-click="toggleActive(form)" ng-show="!form.active" class="btn btn-outline-warning glyphicon glyphicon-ban-circle"></i>
           </td>
-          <td>{{form.form_type}}</td>
-          <td>{{form.form_model}}</td>
+          <td>{{form.type}}</td>
+          <td>{{form.form}}</td>
           <td>{{form.version}}</td>
           <td><i class="btn btn-warning glyphicon glyphicon-file"></i></td>
           <td><i class="btn btn-danger glyphicon glyphicon-trash"></i></td>
@@ -94,7 +95,57 @@
       </tbody>
     </table>
   </div>
-
   <!-- Delete Confirmation Modal -->
+</div>
+	</div>
+</script>
 
+<script type="text/ng-template" id="tabEmail.html">
+  <div class="text-center">
+  <div class="page-header">
+    <h1 id="title">Interview Links</h1>
+  </div>
+  </div>
+
+  <div id="link-container" class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <form name="linkForm" class="text-left">
+          <div class="form-group">
+            <label class="control-label">Internship Link:</label>
+            <input class="form-control" type="text" ng-model="postCandidate.firstName" required>
+          </div>
+
+          <div class="form-group">
+            <label class="control-label">Full-Time Link:</label>
+            <input class="form-control" type="text" ng-model="postCandidate.lastName" required>
+          </div>
+
+          <div class="text-center">
+            <span class="glyphicon glyphicon-refresh" ng-show="sendingData" aria-hidden="true"></span>
+            <span class="glyphicon-class" ng-show="sendingData"></span>
+            <button type="submit submitBtn" ng-class="submitBtnClasses" data-ng-click="submit()" >{{buttonText}}</button>
+            <button type="submit" class="btn btn-warning">Cancel</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</script>
+
+
+
+
+
+    <div class="container-fluid">
+      <ul class="nav nav-tabs">
+        <li role="presentation" ng-repeat="tab in tabs">
+          <a ng-class="{active:isActiveTab(tab.url)}" ng-click="onClickTab(tab)" href="">{{tab.title}}</a>
+        </li>
+      </ul>
+
+      <div id="tab-content-div" class="tab-content" ng-include="currentTab"></div>
+
+
+  </div>
 </div>
