--- a/app/views/softpen.html
+++ b/app/views/softpen.html
@@ -46,10 +46,12 @@
         </button>
       </div>
       <div class="btn-group" role="group" aria-label="...">
-        <button id="undo" type="button" class="btn btn-default">
+        <!-- rotate left -->
+        <button type="button" class="btn btn-default" ng-click="rotateBy(-90)">
           <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
         </button>
-        <button id="redo" type="button" class="btn btn-default">
+        <!-- rotate right -->
+        <button type="button" class="btn btn-default" ng-click="rotateBy(90)">
           <span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
         </button>
       </div>
