Fixed bug with negative or >360 angles, added buttons
Buttons use unicode characters for the icons to avoid including more libs

--- a/app/views/softpen.html
+++ b/app/views/softpen.html
@@ -48,11 +48,11 @@
       <div class="btn-group" role="group" aria-label="...">
         <!-- rotate left -->
         <button type="button" class="btn btn-default" ng-click="rotateBy(-90)">
-          <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+          <span class="unicode-icon" aria-hidden="true">&#x21ba;</span>
         </button>
         <!-- rotate right -->
         <button type="button" class="btn btn-default" ng-click="rotateBy(90)">
-          <span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
+          <span class="unicode-icon" aria-hidden="true">&#x21bb;</span>
         </button>
       </div>
       <div class="pull-right camera-pull-right">
