--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -118,7 +118,7 @@
 
 /* viewCandidate.html */
 .candidate-name {
-  color:#494949;  
+  color:#494949;
 }
 
 .tab-content {
@@ -237,4 +237,8 @@ button.candidate-queue-person {
     .modal-content {
         width: 100%;
     }
+}
+
+.unicode-icon {
+  font-size: 1.5em;
 }
