--- a/app/views/interviewerForm.html
+++ b/app/views/interviewerForm.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h1 class="col-xs-12">{{candidate.firstName}}, {{candidate.lastName}} <small>- Interview {{interviewQId + 1}}</small></h1>
+    <h1 class="col-xs-12">{{candidate.firstName}} {{candidate.lastName}} <small>- Interview {{interviewQId + 1}}</small></h1>
   </div>
   <hr/>
   <div class="row tools-bar" id="options">
