--- a/app/views/interviewerTable.html
+++ b/app/views/interviewerTable.html
@@ -6,12 +6,8 @@
 
 <form name="candidateForm" class="text-left">
   <div class="form-group">
-    <label class="control-label">Enter First Name:</label>
-    <input class="form-control" type="text" ng-model="firstName" required>
-  </div>
-  <div class="form-group">
-    <label class="control-label">Enter Last Name:</label>
-    <input class="form-control" type="text" ng-model="lastName" required>
+    <label class="control-label">Enter Name:</label>
+    <input class="form-control" type="text" ng-model="name" required>
   </div>
   <button style="margin-left:auto; margin-right:auto; display:block"id="interviewerSubmit" ng-click="addInterviewer()" type="submit" class="btn btn-primary">Submit</button>
 </form>
@@ -20,15 +16,13 @@
 <table table="interviewers" class="table table-hover">
 	<thead>
 	<tr>
-		<th>Last Name</th>
-    <th>First Name</th>
+    <th>Name</th>
     <th></th>
 	</tr>
 	</thead>
 	<tbody>
 	<tr ng-repeat="row in interviewers track by $index">
-		<td>{{row.lastName}}</td>
-    <td>{{row.firstName}}</td>
+    <td>{{row.name}}</td>
     <td><button type="button" class="btn btn-danger" data-ng-click="deleteInterviewer($index)">Delete Interviewer</button></td>
 	</tr>
 	</tbody>
