--- a/app/views/recruiterHome.html
+++ b/app/views/recruiterHome.html
@@ -26,13 +26,13 @@
                 <div class="col-xs-6">
                   <div>
                     <label for="selInterview1">Select Interviewer 1:</label><br>
-                    <select ng-options="interviewer for interviewer in interviewerDropdown" ng-model="interviewer1" class="cal-select-interviewer" required> </select>
+                    <select ng-options="interviewer as interviewer.name for interviewer in interviewerDropdown" ng-model="interviewer1" class="cal-select-interviewer" required> </select>
                   </div>
                 </div>
                 <div class="col-xs-6">
                   <div>
                     <label for="selInterview2">Select Interviewer 2:</label><br>
-                    <select ng-options="interviewer for interviewer in interviewerDropdown" ng-model="interviewer2" class="cal-select-interviewer" required> </select>
+                    <select ng-options="interviewer as interviewer.name for interviewer in interviewerDropdown" ng-model="interviewer2" class="cal-select-interviewer" required> </select>
                   </div> 
                 </div>
               </div>
@@ -99,13 +99,13 @@
                 <div class="col-xs-6">
                   <div>
                     <label for="selEditInterview1">Select Interviewer 1:</label><br>
-                    <select ng-options="interviewer for interviewer in interviewerDropdown" ng-model="editInterviewer1" class="cal-select-interviewer" required> </select>
+                    <select ng-options="interviewer as interviewer.name for interviewer in interviewerDropdown" ng-model="editInterviewer1" class="cal-select-interviewer" required> </select>
                   </div>
                 </div>
                 <div class="col-xs-6">
                   <div>
                     <label for="selEditInterview2">Select Interviewer 2:</label><br>
-                    <select ng-options="interviewer for interviewer in interviewerDropdown" ng-model="editInterviewer2" class="cal-select-interviewer" required> </select>
+                    <select ng-options="interviewer as interviewer.name for interviewer in interviewerDropdown" ng-model="editInterviewer2" class="cal-select-interviewer" required> </select>
                   </div> 
                 </div>
               </div>
